--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "commander": "^2.18.0",
     "fs-extra": "^7.0.0",
     "lodash": "^4.17.11",
-    "markdown-it": "^8.4.1",
+    "markdown-it": "12.3.2",
     "winston": "^2.4.4"
   },
   "devDependencies": {
