--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "apidoc-core": "^0.15.0",
     "commander": "^2.18.0",
     "fs-extra": "^7.0.0",
+    "http-status-codes": "^2.2.0",
     "lodash": "^4.17.11",
     "markdown-it": "12.3.2",
     "winston": "^2.4.4"
