--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apidoc2postman",
+  "name": "@particle/apidoc2postman",
   "version": "1.1.1",
   "license": "MIT",
   "description": "📝  A tool to generate Postman collections from apiDoc Inline Documentation",
@@ -17,12 +17,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dog1133299/apidoc2postman"
+    "url": "https://github.com/particle-iot/apidoc2postman"
   },
   "bugs": {
-    "url": "https://github.com/dog1133299/apidoc2postman/issues"
+    "url": "https://github.com/particle-iot/apidoc2postman/issues"
   },
-  "homepage": "https://github.com/dog1133299/apidoc2postman",
+  "homepage": "https://github.com/particle-iot/apidoc2postman",
   "bin": "bin/apidocPostman.js",
   "scripts": {
     "build:example": "./bin/apidocPostman.js -i example/ -o postman/ -c example/",
@@ -33,6 +33,7 @@
     "apidoc-core": "^0.15.0",
     "commander": "^2.18.0",
     "fs-extra": "^7.0.0",
+    "html2plaintext": "^2.1.4",
     "http-status-codes": "^2.2.0",
     "lodash": "^4.17.11",
     "markdown-it": "12.3.2",
